[gd_scene load_steps=20 format=3 uid="uid://dwyk40rswoq55"]

[ext_resource type="Script" path="res://scripts/corn.gd" id="1_o744e"]
[ext_resource type="Texture2D" uid="uid://cawq257wer65o" path="res://assets/sprites/corn-sprite-sheet.png" id="2_fewwa"]
[ext_resource type="AudioStream" uid="uid://d2e48gvbxv1c1" path="res://assets/audio/sfx/hurt.wav" id="3_ps8a1"]
[ext_resource type="AudioStream" uid="uid://bvxms1a8bh64p" path="res://assets/audio/sfx/die.wav" id="4_rt34l"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cg04l"]
atlas = ExtResource("2_fewwa")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hfthm"]
atlas = ExtResource("2_fewwa")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jm4bl"]
atlas = ExtResource("2_fewwa")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bokme"]
atlas = ExtResource("2_fewwa")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2ng4"]
atlas = ExtResource("2_fewwa")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sq83f"]
atlas = ExtResource("2_fewwa")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_flx47"]
atlas = ExtResource("2_fewwa")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_5lah5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cg04l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfthm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jm4bl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bokme")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2ng4")
}],
"loop": true,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sq83f")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_flx47")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2yk2j"]
radius = 12.0
height = 66.0

[sub_resource type="Animation" id="Animation_x2ot1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_poggq"]
resource_name = "die"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"die"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_tee4l"]
resource_name = "hurt"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"hurt"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_go4c0"]
resource_name = "idlle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m05p4"]
_data = {
"RESET": SubResource("Animation_x2ot1"),
"die": SubResource("Animation_poggq"),
"hurt": SubResource("Animation_tee4l"),
"idle": SubResource("Animation_go4c0")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fp6ej"]
radius = 17.0
height = 66.0

[node name="Corn" type="CharacterBody2D"]
collision_layer = 10
collision_mask = 9
script = ExtResource("1_o744e")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -32)
sprite_frames = SubResource("SpriteFrames_5lah5")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -32)
shape = SubResource("CapsuleShape2D_2yk2j")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_m05p4")
}

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(1, -33)
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_fp6ej")

[node name="dmg _cd" type="Timer" parent="."]
wait_time = 2.0

[node name="hurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ps8a1")
volume_db = -10.0
bus = &"SFX"

[node name="die" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_rt34l")
volume_db = -10.0
bus = &"SFX"

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="dmg _cd" to="." method="_on_dmg__cd_timeout"]
